--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^4.0.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
