--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
-    "express": "^4.14.0",
+    "export": "^0.1.337",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.15.0",
-    "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9",
-    "validator": "^5.6.0"
+    "lodash": "^4.17.15",
+    "mongodb": "^2.2.36",
+    "mongoose": "^4.13.20",
+    "parse": "^2.13.0",
+    "validator": "^5.7.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.0.2",
+    "mocha": "^3.5.3",
     "nodemon": "^1.10.2",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.1"
   }
 }
